# PixelPitchAI

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  CLAUDE.md  COMPLETION-SUMMARY.md  Caddyfile  Caddyfile.prod  Clean-Solution.ps1  Footex.sln  FootexTestCoverage.html  GEMINI.md  OpenCode.md  README.md  SECRETS-SETUP.md  SECURITY-REMEDIATION.md  TestCoverage.json  appsettings.json  docker-compose.dev.yml  docker-compose.yml  docker-manage.ps1  documentation.md  dotnet9.upgrade.json  fix-all-autofixture-tests.ps1  fix-autofixture-tests.ps1  match_266424.txt  match_266424_parsed.json  run-performance-tests.ps1  suppression.xml  trust-cert.ps1
simulation-engine/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  performance_config.py  pyproject.toml  requirements.txt  simple_performance_test.py
simulation-engine/DataMigration/: cleanup_migration.py  corrected_migration.py  db_config.py  examine_database.py  examine_teams.py
simulation-engine/DataMigration/Coaches/: COACHES_SYSTEM_FINAL_REPORT.md  PROJECT_COMPLETION_SUMMARY.md  README.md  SOLUTION_SUMMARY.md  coach_data.py  examine_current_coaches.py  restore_historical_coaches.py
simulation-engine/DataMigration/Players/: CLEANUP_PLAN.md  api_enriched_players.json  api_player_enrichment.py  final_enrichment_report.py  final_enrichment_report.txt  player_data_quality_report.py  player_data_quality_report.txt  preferred_foot_enriched.json  preferred_foot_enrichment.py  update_db_with_real_data.py
simulation-engine/DataMigration/Stadiums/: STADIUM_SYSTEM_FINAL_REPORT.md  create_stadiums.py
simulation-engine/DataMigration/Teams/: README.md  (+1 more)
simulation-engine/Matches/: match_12_sim.txt
simulation-engine/Matches_Parsed/: Barcelona_2016 vs Real_Madrid_2021_parsed.json
simulation-engine/api/: main.py
simulation-engine/archive/: IterativeGenerationKickoffSwitch2.py  api.py  test_endpoints_simple.py  test_enhanced_endpoints.py
simulation-engine/scripts/: benchmark_performance.py  export_to_onnx.py  performance_comparison.py  quantize_onnx.py  simple_performance_test.py  validate_optimization.py  xgboost_use.py
(+1116 files in other folders)
