[project]
name = "simulation-engine"
version = "0.1.0"
description = "Football Match Simulation API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.23.2",
    "torch>=2.7.1",
    "transformers>=4.54.0",
    "pydantic>=2.11.7",
    "pika>=1.3.0",
    "xgboost>=3.0.2",
    "pandas>=2.3.1,<2.4.0",
    "psycopg2-binary>=2.9.0",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "aiohttp>=3.12.14",
    "sse-starlette>=1.0.0",
    "requests>=2.32.3,<2.33.0",
    "psutil>=5.9.0",
    "accelerate",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.uv]
override-dependencies = [
    "nvidia-nccl-cu12>=0; sys_platform == 'never'",
]
